# mihomo-proxy-manager

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  README_EN.md  README_ZH.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yaml
docs/: route-formats.md
docs/superpowers/plans/: 2026-06-17-provider-upstream-service-implementation.md  2026-06-19-dns-resolution-and-user-agent-access.md  2026-06-20-route-output-formats.md  2026-06-21-access-audit.md  2026-06-21-auto-route-target.md
docs/superpowers/specs/: 2026-06-17-provider-upstream-service-design.md  2026-06-18-dns-resolution-and-user-agent-access-design.md  2026-06-20-auto-route-target-design.md  2026-06-20-route-output-formats-design.md  2026-06-21-access-audit-design.md
examples/: config.toml
src/mihomo_proxy_manager/: __init__.py  __main__.py  access.py  access_audit.py  app.py  cache.py  cli.py  config.py  dns.py  fetcher.py  logging.py  mihomo_schema.py  models.py  refresher.py  render.py  route_targets.py  scheduler.py  security.py  status.py  transform.py
src/mihomo_proxy_manager/parsers/: __init__.py  share_links.py  yaml.py
src/mihomo_proxy_manager/plugins/: __init__.py  http_action.py
tests/: conftest.py  test_access_audit.py  test_app.py  test_cache.py  test_cli_smoke.py  test_config.py  test_coverage_gaps.py  test_dns.py  test_fetcher.py  test_logging.py  test_parsers.py  test_plugins_refresher.py  test_refresher_dns.py  test_render.py  test_route_targets.py  test_scheduler.py  test_security.py  test_transform.py
