[project]
name = "mihomo-proxy-manager"
version = "0.2.6"
description = "Async upstream provider service for Clash/Mihomo proxy subscriptions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "croniter>=2.0.0",
  "filelock>=3.15.0",
  "httpx2>=2.0.0",
  "loguru>=0.7.2",
  "pyyaml>=6.0.2",
  "starlette>=0.37.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "ty>=0.0.1a0",
]

[project.scripts]
mpm = "mihomo_proxy_manager.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mihomo_proxy_manager"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ty.src]
include = ["src", "tests"]
